100% service cover by unit tests